[gd_scene load_steps=6 format=3 uid="uid://coe7x4ej0yuge"]

[ext_resource type="Script" path="res://scenes/ui/victory_screen.gd" id="1_2db05"]

[sub_resource type="InputEventKey" id="InputEventKey_ocrsp"]
device = -1
keycode = 89
unicode = 121

[sub_resource type="Shortcut" id="Shortcut_402wh"]
events = [SubResource("InputEventKey_ocrsp")]

[sub_resource type="InputEventKey" id="InputEventKey_tabwc"]
device = -1
keycode = 78
unicode = 110

[sub_resource type="Shortcut" id="Shortcut_k3eh7"]
events = [SubResource("InputEventKey_tabwc")]

[node name="VictoryScreen" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_2db05")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Overwinning!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Jij bent gewinnen"

[node name="RestartButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Herstarten"

[node name="QuitButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Verlaten"
